prevented horizontal scrolling on mobile devices

--- a/style/style.scss
+++ b/style/style.scss
@@ -15,7 +15,6 @@ html {
         @include flex-direction(column);
         background: #FDFEFE;
         @include flexbox();
-        overflow-x: hidden;
         position: relative;
         min-height: 100vh;
         font-size: 15px;
@@ -30,6 +29,7 @@ html {
 
 #wrap {
     @include flex(1, 0, auto);
+    transform: translateY(0);
     overflow: hidden;
     width: 100%
 }
